vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: random-facts-app-vs
  namespace: random-facts-app-canary
spec:
  hosts:
  - "random-facts-app-canary.istio.marson.37767.workshops.acceleratorlabs.ca"
  gateways:
  - istio-gateway/main-gateway
  http:
  - route:
    - destination:
        port:
          number: 5000
        host: random-facts-app-service
        subset: v1
      weight: 100
